<resources>
    <string name="app_name">ARROYO_RAMIREZ_YUCRA_CABEZAS_pa2</string>
    <string name="btnLogin">Login</string>
    <string name="textUsuario">Usuario</string>
    <string name="textContraseña">Contraseña</string>
    <string name="Titulo">Login</string>
    <string name="olvidasteContraseña">Olvidaste la contraseña?</string>
    <string name="TituloRegistrarUsuario">Registrar Usuario</string>
    <string name="textTelefono">Telefono</string>
    <string name="textCorreo">Correo Electronico</string>
    <string name="textContraseñaConfirmar">Confirmar Contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="RegistrarProductoAcademico">Registrar Producto</string>
    <string name="btnBuscarProductoAcademico">Buscar Asignatura</string>
    <string name="btnListaProductos">Lista</string>
    <string name="GestionProductosAcademicos">Productos Academicos</string>
    <string name="textNoOlvideSeleccionar">No olvide seleccionar una de las opciones. . . Gracias!!</string>
    <string name="textNoTienesCuenta">Eres nuevo, registrate te esperamos</string>
    <string name="TituloRegistrarProducto">Registrar Producto</string>
    <string name="textAsignatura">Asignatura</string>
    <string name="textTipoEvaluacion">Tipo de Evaluacion</string>
    <string name="textEntrega">Tipo de Entrega</string>
    <string name="textFechaHora">Ingrese Fecha y Hora</string>
    <string name="textTema">Tema</string>
    <string name="textDetallesImportantes">Detalles Importantes</string>
    <string name="textCorreoDocente">Ingrese Correo de Docente</string>
    <string name="textNombreDocente">Ingrese Nombre del Docente</string>
    <string name="butTipoEvaluacion">Selecciona tipo de evaluación</string>
    <string name="buttTipoEntrega">Selecciona tipo de entrega</string>
    <string name="btnRegistrarProducto">Registrar</string>
    <string name="btnCancelarRegistroProducto">Cancelar</string>
    <string name="TituloRegistrarProductoAcademico">Registro de Producto A.</string>
    <string name="textBuscarProductoAcademico">Buscar Producto Academico</string>
    <string name="textListaProductosAcademicos">Lista de Productos Academicos</string>
    <string name="btnSalirInicio">Salir</string>
    <string name="btnBuscarAsignatura">Buscar</string>
    <string name="btnBuscarSalirAsignatura">Salir</string>
    <string name="btnBuscarSalirLista">Salir</string>
</resources>