<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_RegistrarProducto"
        android:title="@string/RegistrarProductoAcademico"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_BuscarProducto"
        android:title="@string/btnBuscarProductoAcademico"
        android:icon="@android:drawable/ic_lock_lock"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_ListaProductos"
        android:title="@string/btnListaProductos"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_SalirInicio"
        android:title="@string/btnSalirInicio"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="never" />
</menu>