<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/minimalista9" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/degradado"
        android:alpha="0.8" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_registrarproducto"
        android:translationX="155dp"
        android:translationY="115dp"
        />

    <Button
        android:id="@+id/buttRegistrarproductoAcademico"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/btnRegistrarProducto"
        android:translationX="30dp"
        android:translationY="680dp"
        />

    <Button
        android:id="@+id/buttCancelarRegistroProductoAcademico"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/btnCancelarRegistroProducto"
        android:translationX="260dp"
        android:translationY="680dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="35dp"
            android:elevation="30dp"
            android:orientation="vertical"
            android:padding="12dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/TituloRegistrarProductoAcademico"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"
                />

            <EditText
                android:id="@+id/editTextAsignatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_usuario"
                android:drawablePadding="15dp"
                android:hint="@string/textAsignatura"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

            <Button
                android:id="@+id/buttTipoEvaluacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/butTipoEvaluacion"
                android:drawableLeft="@drawable/ic_usuario"
                android:padding="10dp"
                android:gravity="left"
                android:drawablePadding="15dp"
                android:minHeight="48dp"
                />

            <Button
                android:id="@+id/buttTipoEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttTipoEntrega"
                android:drawableLeft="@drawable/ic_usuario"
                android:padding="10dp"
                android:gravity="left"
                android:minHeight="48dp"

                />

            <EditText
                android:id="@+id/editFechaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:hint="@string/textFechaHora"
                android:inputType="datetime"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

            <EditText
                android:id="@+id/editTextTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:hint="@string/textTema"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

            <EditText
                android:id="@+id/editDetallesImportantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:hint="@string/textDetallesImportantes"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

            <EditText
                android:id="@+id/editCorreoDocente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:hint="@string/textCorreoDocente"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

            <EditText
                android:id="@+id/editNombreDocente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:hint="@string/textNombreDocente"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1"/>

        </LinearLayout>

</FrameLayout>
