<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/minimalista9" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/degradado"
        android:alpha="0.8" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_registrarusuario"
        android:translationX="155dp"
        android:translationY="115dp"
        />

    <Button
        android:id="@+id/buttRegistrarNuevoUsuario"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_gravity="left"
        android:layout_marginVertical="30dp"
        android:text="@string/btnRegistrar"
        android:textSize="18sp"
        android:fontFamily="@font/texto3"
        android:translationX="30dp"
        android:translationY="510dp"
        />

    <Button
        android:id="@+id/buttCancelarRegistrarUsuario"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:layout_marginVertical="30dp"
        android:text="@string/btnCancelar"
        android:textSize="18sp"
        android:fontFamily="@font/texto3"
        android:translationX="-30dp"
        android:translationY="510dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:elevation="30dp"
        android:orientation="vertical"
        android:padding="12dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/TituloRegistrarUsuario"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondocurvo"
            android:drawableLeft="@drawable/ic_usuario"
            android:drawablePadding="15dp"
            android:hint="@string/textUsuario"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"
            android:maxLength="8"/>

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fondocurvo"
            android:drawableLeft="@drawable/ic_contrasena"
            android:drawablePadding="15dp"
            android:hint="@string/textTelefono"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"
            android:maxLength="9"/>

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fondocurvo"
            android:drawableLeft="@drawable/ic_contrasena"
            android:drawablePadding="15dp"
            android:hint="@string/textCorreo"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fondocurvo"
            android:drawableLeft="@drawable/ic_contrasena"
            android:drawablePadding="15dp"
            android:hint="@string/textContraseña"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"/>

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fondocurvo"
            android:drawableLeft="@drawable/ic_contrasena"
            android:drawablePadding="15dp"
            android:hint="@string/textContraseñaConfirmar"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            android:minHeight="48dp"
            android:fontFamily="@font/texto1"/>


    </LinearLayout>

</FrameLayout>
