<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/minimalista9" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/degradado"
        android:alpha="0.8" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_buscarproducto"
        android:translationX="155dp"
        android:translationY="115dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="35dp"
            android:elevation="30dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/textBuscarProductoAcademico"
                android:textColor="#FFFFFF"
                android:inputType="text"
                android:textSize="25sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1" />

            <EditText
                android:id="@+id/editTextAsignatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondocurvo"
                android:drawableLeft="@drawable/ic_usuario"
                android:drawablePadding="15dp"
                android:hint="@string/textAsignatura"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                android:minHeight="48dp"
                android:fontFamily="@font/texto1" />

            <ListView
                android:id="@+id/listViewResultados"
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:divider="#FFFFFF"
                android:dividerHeight="1dp" />

            <Button
                android:id="@+id/buttBuscarAsignatura"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="25dp"
                android:text="@string/btnBuscarAsignatura"
                android:textSize="18sp"
                android:fontFamily="@font/texto3" />

            <Button
                android:id="@+id/buttSalirAsignatura"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnBuscarSalirAsignatura"
                android:textSize="18sp"
                android:fontFamily="@font/texto3" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
